<resources>
    <string name="app_name" translatable="false">AntonCerts</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="preference_file_key" translatable="false">super_secret_key</string>
    <string name="preference_login_key" translatable="false">login_key</string>
    <string name="preference_password_key" translatable="false">password_key</string>
    <string name="zam_w_kurs">Buy Course</string>
    <string name="currency" translatable="false">PLN</string>
    <string name="made_by">Made by</string>
    <string name="school_class">Class</string>
    <string name="log_in_header">Log in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Log in</string>
    <string name="no_courses_splash">No Courses ;-;</string>
    <string name="share_sms">share sms</string>
    <string name="share_email">share email</string>
    <string name="register_header">Register</string>
    <string name="username_label">User full name</string>
    <string name="login_label">Login</string>
    <string name="password1_label">Password</string>
    <string name="password2_label">Repeat password</string>
    <string name="company_checkbox">Are you a company?</string>
    <string name="sign_up_button">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="about">about</string>
    <string name="log_in_toast">Sign in before ordering!</string>
    <string name="current_course_key" translatable="false">current_course</string>
    <string name="white_spaces_validation">Login cannot contain whitespaces!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="account">Account</string>
    <string name="choosen_options">Choosen options:</string>
    <string name="final_price">Final price</string>
    <string name="email_error">sharing Email failed</string>
    <string name="sms_error">sharing sms failed</string>
    <string name="vue_img" translatable="false">/9j/4AAQSkZJRgABAQEAAAAAAAD/2wCEAAsJCQcJCQcJCQkJCwkJCQkJCQsJCwsMCwsLDA0QDBEODQ4MEhkSJRodJR0ZHxwpKRYlNzU2GioyPi0pMBk7IRMBBwgICwkLFQsLFSwdGR0sLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLP/CABEIAa4B2gMBIgACEQEDEQH/xAAbAAEAAgMBAQAAAAAAAAAAAAAABQYBBAcCA//aAAgBAQAAAADrgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaeqAafkBP/UAxA/IBuegH0kgA0OfeQENB5A6F0QArvGwG7ZwC32MAMVCugPNT+IH07jIgeOKwwGbVsgN/oPoAGvzz4AI6uALb1kCkcvyDEvPAF8lcgAVyoAFY0gHZLEGrw7UA9236AJq8AAHnn2gA1qoAme1+hzOigYsEqA99D3AABE0MAgYjIMdQu5EcS8gbNqyAs9qyAAMUmEAfOpeANruW1jj1bAWfdAbPRfoAADU534ARMBkC9dLq3IwEjYwC6zoAACqVgBiq6wHrtPJo0DNs+4CTvvoAAB8ud6wDSq+QNjWyDE1NgM9AkQAABBUoArkbkAB9rZ6AWC45AAAGKDGAPjUsAALFJAPr0XYAAABHc/wAhIXIANy0AFtsoAAACm18B5qXyABatoBu9C9gAAANbnfyARtcyAYlbAAXmZAAAAFaqQBV9MA9W76AJi85AAAAHjnukA1aqAxPS4D10PdAAAADERRQCvxYGxa8gLLbQAAAAMUaHAfOpeAxZt8B9+i/YAAAABo898gIiCDfsoBcrAAAAAAYqdaAYqmuZtewAkb/AOgAAAAB8ed64DQrTExOgF/kwAAAAAV+mgFaj/rbfYCduoAAAAAHmgRwD4VKwSgD6dE2gAAAAAEXQsAI2SALVaAAAAAABSoIAANvof0AAAAAAGtzr5gAC7zWQAAAAABisVUAAlr3kAAAAAAHjneoAB66DvgAAAAAAISkAAWK4AAAAAAAGKHFAB9+ifcAAAAAAAaHPvIAuFiAAAAAAADFQroBv9A9gAAAAAAA+HOviBm9ywAAAAAAACu08Cbu4AAAAAAAB45/oB76JtgAAAAAAACJoYWe1gAAAAAAAApEIbPRPqAAAAAAAADT554XSeAAAAAAAAAVSsSl89AAAAAAAAAPnzy7SIAAAAAAAAA1NrIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAf/8QAGQEBAAMBAQAAAAAAAAAAAAAAAAECAwQF/9oACAECEAAAAAAAAAAAAAABAmwqEyKwJBzjT05TyYjs0MPOF9QUyHb1kcMNeseXmTuAxqT6lzDmd1jk4ZNrAIwHR6BHFt0FfLqW2AGeY9LYzvJw8o2sAIwGnqAZebBfUAFMh39IPNxG8gAY1L+nYc/njTQABXEdfdCPMzJ3AAGVCfUu4uQjewAAc439GnlwW2AABnmPS5ecbyAABhBao00AAAUyAnaQAADGoNbgAACMAncAAAGVBtYAAAEYFtgAAAGeVtpAAAAMNLgAAACtgAAAAAAAAAAAAAAAAD//xAAaAQEAAgMBAAAAAAAAAAAAAAAABQYBAwQC/9oACAEDEAAAAAAAAAAAAAADzpyethj0DBjUM7g8UnQbrZ6Y37hy+TgrQnLICJqom5gz15audnzVec3XbYBTuA9Wzabt+OXGERBmLPNAOKm4JKwjr1aWdVT8HbcsgFYhjNm7D35wzARQuEgANNJ1nVaRnDlq+CWtQAIOtiflAVjjPd16AAeaZyG21+xHV0WCwAAI2oiXnDzVNJ0XX2AAVKMM2rpQkMLXKgADlpfk7rNoqnkkbeAACuQQssXHGbn2AAA10nSbNYm7KAAAhqwBsu+0AABincILLNgAADgpwddz9AAABV4cW6SAAABopPhKWwAAABA131dekAAAB5pUrYgAAABH9vsAAAAAAAAAAAAAAAAB/8QAQxAAAgECAgUHCQUHBAMBAAAAAQIDBBEABSEwMUFRBhITFCIjYRYyQEJQVHGBkyBSlNHSM2KRscHh8BAVgKEkQ3Tx/9oACAEBAAE/AP8AhjWZlQ0BjFS7J0gJUhHYG20XUY8osk94b6Un5Y8osk94b6Uv5Y8osk94b6Uv5Y8osk94P0pfyx5RZJ7w30pfyx5RZJ7w30pfyx5RZJ7w30pfyx5RZJ7w30pfyx5RZJ7w30pf04flnyUjd43rWDIbMOr1Gg/JMeW/JD39vw9T+jHlvyQ9/b8PU/ox5b8kPf2/D1P6MeW/JD39vw9T+jHlvyQ9/b8PU/ox5b8kPf2/D1P6MeW/JD39vw9T+jHlvyR9/a3/AM9R/PmYgqIKmGGogcPDMoeN12Mp2HVXxPyw5K000sEtdaWJyjhYZmAYG1rqtseW/JD39vw9T+jHlvyQ9/b8PU/ox5b8kPf2/D1P6MeW/JD39vw9T+jHlvyQ9/b8PU/ox5b8kPf2/D1P6MeW/JD39vw9T+jHlvyR9/b8NU/owvKTI2CstQ3NYAi8MoNj4FceUWSe8N9KX8seUWSe8H6Uv5Y8osk94b6Uv5Y8osk94P0pfyx5RZJ7w30pfyx5RZJ7w30pfyx5RZJ7w30pfyx5RZJ7w30pfyxBneV1MqQwzM0jkhV6OTdp3jWZrQpXUkkRHbHbibgww6tG7oy2ZGKkW2EanOaW4FWg0rYS6P4HU8gM7/aZLUPuaWiJ4DS0f9RgbNTytzoZPlknRsOt1QMNMu8XHaf5YJLFmYksxJYnaSdNzqMtpOszhmHdRdpiRtO4Y+VhqeTeXdDE1bKveTDmxg7Qn99YccpMv6KUVsa93KQsoHqtbQx+OpdVdGRhdWHNYeB34q6dqaeSI3sCSh3FTqKeonpKinqYGKzQSJJGQbdpTfGT5nBm+X01ZER3i2lUepINDC2okkSNHkdgqIpZmOwAaSTjlLnD5zmk9QC3V4u5pVG6NT53xbUKGZgqi7MQAPjiiplpoEjHnMAznxOnU5VQtX1ccZB6JCHlI3KNIHzwiKiqigBVAAA3Aaw4qqeKqglgkF1kUr8OBxVU8lJPNTyX50bEX3MNxGpzWk6xCZEF5YRcfvLvGp5E53/t9f1Gd7UtcVVbnRHNub57PtnHLzO+qUq5XA9p6tSZyu1IeHzx8rf01GT0nPdqmQdlNEY4tvPyx/nx1GnZtJ0D57sZJl4oaRWcd/NZ5fC+xflr+UmX9NGKyJbyRC0gG1o9To/mCOIOMzpDTTkr+yluy+B3jUAspDAkFSCCNo8cck86GcZahkb/AMukCwVN9psOy/z+1mFbT5fSVNZOwEVPGztfedyjxOzGY19RmdbVVs5PPncsAfVX1VHgNRDC88scSaS5t8BvOIYkgijiTYigfE6nk/l5qqnp5F7mnIbTsZ938MDXuiurIwurAqw4g4zWhagq5YrHo2PSRHipOwfDU1tKtVA8fr+dGd4YbsMGUsraGUkEeI1HJvOJMmzOCck9XmIgqlG+Nj51uI24R0kRHRgyOoZWGkEHSCPsHdjl9nZnnjyena8UBElWVOhpLaE+WNOoyek6OM1LjtyAhAfVXjqYo5JpIooxd5GCILbzoxl9HHQ0sNOu1QOe29m3nA9AzvL+vUrFR38F5IjvOjSuCLEg6CDYjx1OcUnRuKmMdlyFktsDD1vnqP8ADfwxyDzs1VM+V1D3npRzoCx7Tw7wPh9jlDm8eT5bUVVx0zAx0yn1pWFh/DEssk8ks0rFpJXaR2O0ljcnUUNKaqoRPUU86Q+A3fPACgKFFlAsBwGp5NZcSTXyrsukAI2cWH8vQrbfHHKDL+qVPTxr3NQSTYaFfhi2omiSaKSJwCri3z44mhaCV4nBujEC+8HZqMtr6jLK6lroGs8EgYj76HzkPgcUFZT5hSUtZA3OinQSLpvzSdqn4f6HQL7hpN8csM6/3bMnjhe9HRExQ8HkHnPqLcBc8MZbS9WgFx3kvac79O7U0NJJW1UNOoNmYdIeCDbiGJIIo4oxZI1CqPh6HmFHHXUssDjSQSh+642HEsckMksUgs8bFWHiDqNGM4pOkjFSou8YtJbenHU8gs76Cd8oqGtFUEyUvOPmyb1Hxxf+v/WOWmd/7ZlxpoXtWVwaKO3nJHazP/QY4/Hfv8dRlVJ08xlcd3CRfgX2gark9l/VqbrEi2mqBzhfaqbQMD0TlLl+la6JdoCTgeGxtSQpBDC4NwfEHFdSmlqJE9QktGdxB+3oxFJJDJFNExWSJ1dGG0MpuDjJs8pcxydcxkdUNPGwrNI7t4xcnTx2jGeZrLnOY1NY9xGTzIFJ8yMaAP6/PUIjSMiILs5AUYpadaaCOIbQLseLHaTqcloDXVac5e4hIeUnYbaQuFAAAGgAAADcN3os0KTxSxOLq6lSPjiupHoqqaB/VYlDxQ7CNTmVKKmBub+0iJdfEbxjTs3jQfjqIa6tgp6ukimZaer6PrEY2PzDcf31OTUnnVTjZ2Ygf56kKWKqoJZiAoG8k6BjKKBaCkjjIBlftynix3ei2GDsxyhy/rNOKmNbzU92IA0um8Y/z5aj/BjNaToJulQd1NpHg28H0CmgepmjiUHtEFiNyjbiNFiRI0FlQAAank3l5nnNZIvdQEiO/rScflgX9HIBBBFwdBB8cZ1QGhq25o7mUl4uAvpI1NVAtTDJE20i6ngw2YdGjd0YWZSQdflNJ0EPTMO9l0/BeGpp4JamaGCIEvKwUeAva5xR00dJTwU8YAWNbHxY7SfSc3oFr6SRAB0qAtE3BgMFWUsrCzKSrDgRo1Oc0nm1SDgso/kcDW5dSmqnXnA9FH2nPHwxa2gCw0ADcANTyay/o4zXSrZ5LrCDtCcfn6Ucco8u6CcVka91ObOANCycT8dTIiSo8bi6sCDfgcVNO9NNJC3qnsniu46wAkgC5JsABtJOKClFLTqht0jdqQ8WO7U5ZRPXVcUIB5gPOmO4IMRxpGiIgsqAKoGwAel1lNHWU81PINEilQeB3HFRBLTTSwyCzIxB8RuOpzal6aESoO8iudG9eGBsGryelEkvWHHYj8y+wvs1Nr7N5sPjjIsv6nSh3HfT2kfiBuX5emWxyly7notdEvajAEwG9PvamwNwdhH8b4zClNNUEKO7luycPEaqKJ5pY40BLOwXRw34ghSCKOJLc1B/EnfqLYyHLzWVQldT0FPZzfYz7hgDZ6bKiyI8bgFXUqwO8HRjM6JqCrlhI7F+dEeKH8saPt6MV9MKqndB+0XtRnxG7BBUsCLFSQwO4jUf/uMnpOYpqXHafsx32heOpjR5HSNBd3ZUUcSTbGW0SUFJFCLc+3Okb7znafTjjPcv65SF0HfwAunErvGNmjeNB+Oo/wAGM4pOjkFQg7EnZa25tRR0zVVQkY80dpzuCjChVVVUWCgBfgNTyay/nu1dKuhbrBcet97T7AIBvfYcZ9l/U6syIvc1F3Ww0K42rqZ4VnikiYaGBtfc27EsbwySRP5yEj4+P28sperwc5h3sou3gNw1NHTSVlTDTINMjAE8FGkk4p4I6eGOGMWVAAPYOZ0SV1LLAfOI50Z+640jEiPE7xupDxsVcHwNtTnFJz1FSg7SWWQD7vH7WV0pqJxI47qHtn95tw1XJzL+rwGqlW0tQBzb7VjGz+OB7BOOUuXcxhXxL2WIWe247jqWVWVkYXVgVYfHFZTNSzvGfNPaQ8V+wqs7Kii7MbAeJxR060sEcQ86wLnix1OUUBr6tEYHoY7PKfAbBhVVQqgABQAAN1vYdRBHUwywyC6SKVYfHFZTSUdRNTuNMbaDbap2EanM6TrMBZR3sXaX94bx9jJqXnFqp10LdYvE8cf589QASQALkkADiTotjJsvFBSIrAdNKA8x/eO72Lyiy7rEAqo172AENbaybf8ArVZpSdXnMii0UxLKBsU7x/pTwPUzRwptZgCeA3k4jjSKNI0FlQBR/fUcccnsv6zUGpkW8NOewCNBk3fwwPYrKrAqwuGBBB3g4zehahq3QA9FJeSI7rHaPli2oq6daqCSI2vpZDwYYZWRmRwQyEqwO3RjKKXoojUOO8l80H1U/vqYYZJ5YoYxd5GCr89+KKljo6eKnjHmKOcfvNvPsfOcv69SOFA6aLvIT4javzwQQSpBBBIIO4g2OpqssWeqinFghN5xxI0/940AAAWAAA8ANg1PJnLrB6+VdLXSC+5d7Yt7HOzHKLL+rVHWox3M5u1tivv/AI+hZfRyV1VFAo0GzSHgm04hiSFI4kACRqFUDcBs9k11JHWU00DjQymx4NuOJoZKeWWCQduJijfLf8/Qcgy4UlKJpFtPUDnG+1VOkLgbvZXKXLrqK+JdK9icDaV3N8vQMjy/r1WGcdxBZ3vsZr6FwAAABsHsuWOOWN43UFHUqwPAi2Mwo3oaqWBgeaDeIneh2a5Ud2REF2Zgqi2kk4yqiSgpIogO21nlPFz7MOOUGX9bpTNGLzU4LDiyb1x/n9tbyby/pZHrZVukZ5sN/Wbe3s62i3HGd5f1GrZkXuKgl4xuUk6VGNOrpaaWrngp4786RrX4L6x+WKWnjpYIYIxZI0Cjx4n2fmlCtfSyRf8AsA50TcGGGR0Z0YWZGKsOBGjV8m8v6KE1ki95MLR3GlU4j4+0DjlJl4ikStjXsSnmzAbFa2g/PVZVQtX1ccVj0SESSkfdGwYRVRVRQAqgAAbAB7QOKqniqoJoJRdJFK/A7iPhiqppKSeaCQWaNiL8RuI1ABJAGknRbjwGMky4UNIpYWnms8vhwXFvaXKTL+lhFZEt3h/agbTHx1HJ/L+tVPTyLeGnN9Oxn3DA2e03VXVkYAqwKkHYQRbGa0LUFZLFbumvJCeKk7Pl9qKOSaSOGMEySMEUDidGMvo46KligW1wAXP3m3n2rndAK6kbmjvobyRm2k8V+eNIuCLEGxB2g/Z5NZffn10q7OxACP4vge1bY5QZf1Sp6eNbQ1BvoGhX4fYoaR62php1B7TXc/dUbTiCGOCKOKMAJGoUAeHtfMKOOtpZoG2spKH7rjSDiWOSGSSKQWeNijDxG/5/6fHHJ3L+q03WZVtNUC4vtWP1Rge2OUuXm610S/uzW/6bGnGTUBrqtQwvDDZ5fE7QuAABYCwAAA4Ae2NOJoY54pYpFBR1KkHxxWUU1JVyUpW7c+0X7ysdFsZRQLQUkcZHesOfK28sd3y9tHZiagpp6mmqZFvJBfmcDcb/AIYH/Ib/xAAlEQACAQQBBAMBAQEAAAAAAAABEQIAAxIgIRAwQEEEMVFCUGD/2gAIAQIBAT8A/wB9imKYpihz9VifysT+VifysT+bAOsT+VifysT+VifynTFMUxT2TohcaW5YyoFh9RV2CLGtuOI0vTxCr7++qqA3kHr8e5/J0kGFRCK62os6NcmrkspaDnskI6AouoSEg9LsfY6J1AYhafIuIYjWAQ7MgxrYniUdDzxUo4mrUfZ0lLEZGpSyL0iGe3OPvT6qzPMaThlQCC0v3GcRrEIds8iiFpamYSfqmwxvdnjF1986QD57sxw9fj3GMTveuZnROgF3pBHSMsS6jLIPW/cxCGsR778hxS0+Pc/k6SKDqcsi9IhmvrwJBHQFF1blnF9fkXOcRrEIeCQxrZuYyR6TljF0Sy9Ih+HMa2J5RRq/PIrWIQ8QhaRkYljWMffiyD57A5ocBeNILeI9+PIMbRD8mYXOsQvJIdH7XWA58uY99BQC8whVAe/NkHQ/6n//xAAvEQABAgQGAQQBAgcAAAAAAAABAgMABBEgBRITITFBQBAUMFKBYbEjQ1BRYHGR/9oACAEDAQE/AP68pQSKqNI9yyeFCPcNfYR7hr7CPcNfYQl5tXBjMIzCMwjML8wjMIzCMwj3DX2Ee4a+wj3DX2Ee4a+wgPtk0ChctAcSUHuJhksOFs9WMO6TgVCVZ0hQ7sbVtQ2rVU2Tr+kig5Nm0YVLBR1lD/V+Jy2qjUTyLcNf/lKsBpvANRX1cVQUsJAFTEy8XnCqxhovOBAhpsNICE9X0rsYn5bQdJHBjv1QooUFDqGXQ6gLFjaqbehNIUamtmITFBkTzbhcsW0aiuT8M7L67ZT3BBBobMPmNNeU8Gz9YSaiHFV2sdcDaCow44XFFZskpczDoHQ3gAAbfFiktpr1U8GypG4iTfDzdOxYlRSY53sxCYzKyJ4FlCdhEjLaDe/J+N5oPIKFQ62WllB6slXyy5+hgUO4vmngy2TBJJqbMMltVzUVwP3+XFZbMnWTyLcPfzp01dcXzj+s5twLEIK1BCeTEuyGGwgfKpIUKHiJqXMu4U2NOltQUIbWHEhYtn39NGQcm3CZbbWV+PnxCW1m8w5FuHTFDpK/FilhCSow+6XllRslmC+4EQhAQkJTwPAxKW0XMyeDYlRScwiWeDzYV364jMcNptw2V0kZzyfBmmA+2U/8hSShRSqyRf0l5TwfR90NNlRhSitWZVmHy2u5U8Dw8WlqHWT3zbIvh1GWu4ief1F5RwLBuaDmJOX9u2Ed+G42HElCu4faLLhQbG3FNmqY5swqWzK1VDYeLicrqI1E8iP0vaaU6sIT3DLQaQEJ8UiopE9L6Dh/seL8KlsidVXfjz0sH2qDkRvwerZSXL7oT13CUhIoPIxOV016ieD+8c+o32jD5bQbqeT5L7IfQUHuFoLaik9euGy2s5nVwPLxWWr/ABk/n0SkrUEjuJZkMNhI8tSQtJSeDE0wWHCkxhUtUl5X482dk/cgU5htAbSEp6/yn//Z</string>
    <string name="base64_format_picture">Base64 format picture</string>
</resources>